# catalyst-onchain-libs

./: DesignDocument.md  DeveloperGuide.md  IterativeBenchmarks.md  README.md  Report.md  Security.md  Testimonials.md  UseCase.md  cabal.project  fix-hlint.sh  flake.nix  hie.yaml
benchmarks/: bench-2026-01-29.txt
nix/: project.nix  shell.nix
src/plutarch-onchain-lib/: plutarch-onchain-lib.cabal
src/plutarch-onchain-lib/lib/Plutarch/: Lib.hs
src/plutarch-onchain-lib/lib/Plutarch/Core/: Context.hs  Crypto.hs  Data.hs  Eval.hs  FieldBinds.hs  Integrity.hs  List.hs  PByteString.hs  PlutusDataList.hs  Scripts.hs  Time.hs  Trace.hs  Unroll.hs  Utils.hs  ValidationLogic.hs  Validators.hs  Value.hs
src/plutarch-onchain-lib/lib/Plutarch/Core/Internal/: Builtins.hs  Conditionals.hs
src/plutarch-onchain-lib/lib/Plutarch/Extra/: Record.hs
src/plutarch-onchain-lib/lib/Plutarch/MerkleTree/: Helpers.hs  Merkling.hs  PatriciaForestry.hs
src/plutarch-onchain-lib/test/: Bench.hs  Test.hs  TestUtils.hs
src/plutarch-onchain-lib/test/Plutarch/List/: Test.hs
src/plutarch-onchain-lib/test/Plutarch/MerkleTree/: Test.hs
src/plutarch-onchain-lib/test/Plutarch/Value/: Test.hs
